# maqistor

./: .dockerignore  .gitignore  Cargo.toml  PROJECT_REFERENCE.md  maqistor.example.toml  maqistor.toml
benchmark/: README.md  generate-certs.sh  maqistor.toml  oha_util.py  run.py  run_capacity.py  run_closed.py  run_open.py
benchmark/artillery/: complete-placeholder.yml  health.yml  ingest.yml
benchmark/noop-worker/: Cargo.toml  Dockerfile
benchmark/noop-worker/src/: main.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs
crates/dispatcher/: Cargo.toml  README.md
crates/dispatcher/src/: config.rs  lib.rs  main.rs
crates/dispatcher/src/http/: health.rs  jobs.rs  mod.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: adaptive.rs  lib.rs  types.rs
crates/engine/tests/: dispatch_port.rs
crates/maqistor/: Cargo.toml  README.md
crates/maqistor/src/: config.rs  main.rs
crates/persistence/: Cargo.toml  README.md
crates/persistence/src/: lib.rs  sqlite.rs  types.rs
crates/persistence/src/sqlite/: adaptive.rs  bulk.rs  common.rs  ingest.rs  mod.rs  options.rs  results.rs  store.rs  tests.rs
crates/worker-protocol/: Cargo.toml  PROTOCOL.md  worker-protocol-v1.cddl
crates/worker-protocol/src/: lib.rs
crates/worker-sdk/: Cargo.toml
crates/worker-sdk/src/: lib.rs
