[workspace]
resolver = "2"
members = [
    "crates/maqistor",
    "crates/api",
    "crates/dispatcher",
    "crates/engine",
    "crates/persistence",
    "crates/worker-protocol",
    "crates/worker-sdk",
    "benchmark/noop-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
maqistor-api = { path = "crates/api" }
maqistor-dispatcher = { path = "crates/dispatcher" }
maqistor-engine = { path = "crates/engine" }
maqistor-persistence = { path = "crates/persistence" }

# External crates
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
prost-build = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
toml = "0.8"
tonic = "0.13"
tonic-build = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
