[package]
name = "maqistor-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
maqistor-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http.workspace = true
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
maqistor-dispatcher.workspace = true
tokio.workspace = true
