[package]
name = "maqistor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "maqistor"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
maqistor-api.workspace = true
maqistor-dispatcher.workspace = true
maqistor-engine.workspace = true
maqistor-persistence.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
