[package]
name = "maqistor-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
maqistor-engine.workspace = true
rusqlite.workspace = true
uuid.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true
